{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 19,
  "lineage": "be21e103-9b0d-e075-a5d6-ddfeb609ffbf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "openwebui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783764616094:internet-gateway/igw-0a98a09f381b86ef2",
            "id": "igw-0a98a09f381b86ef2",
            "owner_id": "783764616094",
            "vpc_id": "vpc-09d00aa8b2f239189"
          },
          "dependencies": [
            "aws_vpc.openwebui"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "openwebui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783764616094:route-table/rtb-0b83d7a6182e64266",
            "id": "rtb-0b83d7a6182e64266",
            "owner_id": "783764616094",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a98a09f381b86ef2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09d00aa8b2f239189"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.openwebui",
            "aws_vpc.openwebui"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "openwebui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efa7b56cbb047698",
            "route_table_id": "rtb-0b83d7a6182e64266",
            "subnet_id": "subnet-0029314f8a1944f1f"
          },
          "dependencies": [
            "aws_internet_gateway.openwebui",
            "aws_route_table.openwebui",
            "aws_subnet.subnet",
            "aws_vpc.openwebui"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783764616094:security-group/sg-0a04c455463a77467",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a04c455463a77467",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-all",
            "name_prefix": "",
            "owner_id": "783764616094",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09d00aa8b2f239189"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.openwebui"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783764616094:subnet/subnet-0029314f8a1944f1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0029314f8a1944f1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783764616094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09d00aa8b2f239189"
          },
          "dependencies": [
            "aws_vpc.openwebui"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "openwebui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783764616094:vpc/vpc-09d00aa8b2f239189",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cf923a81b464cb33",
            "default_route_table_id": "rtb-03f49796261536554",
            "default_security_group_id": "sg-0b927d9e84439ac34",
            "dhcp_options_id": "dopt-0c8b3aea880aec74b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09d00aa8b2f239189",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f49796261536554",
            "owner_id": "783764616094"
          }
        }
      ]
    }
  ]
}